# software-engineering-project

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CODEGEN_USER_STORIES_2_3.md  CONSTANT_FOLDING_OPTIMIZATION.md  DEAD_CODE_ELIMINATION.md  Dockerfile  EDGE_CASE_TESTING_SUMMARY.md  EXECUTABLE_GENERATION_US4.md  EXTERNAL_LIBRARY_INTEGRATION_US5.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATIONS_US8.md  README.md  README.txt  README_TESTS.md  STORY_2_COMPLETE_SUMMARY.md  TASKS_2.3_2.4_FINAL_SUMMARY.md  TASK_2.3_COMPLETION_REPORT.md  TASK_2.4_COMPLETION_REPORT.md  TASK_2.5_COMPLETION_REPORT.md  TASK_2.6_COMPLETION_REPORT.md  TASK_2.7_COMPLETION_REPORT.md  TASK_2.8_COMPLETION_REPORT.md  TESTING.md  TESTING_FRAMEWORK_US9.md  TESTING_PROGRESS_REPORT.md  TESTING_QUICKSTART.md  a  assembly.s  ast.json  claude.md  debug_test.s  docker-compose.yml  mycc  test_ast.cpp  test_fib.c  test_identifier.cpp  test_integration.c  (+8 more)
api/: .gitignore  README.md  app.py  config.py  requirements.txt  test_integration.py  test_setup.py
api/utils/: __init__.py  compiler.py
docs/: CODE_GENERATION.md  FAQ.md
examples/: 01_simple_arithmetic.c  02_function_call.c  03_control_flow.c  04_external_printf.c  05_optimizations.c  README.md  assignment_lowering_example.cpp  call_lowering_example.cpp  codegen_example.cpp  compile_example.cpp  constant_folding_example.cpp  cse_example.cpp  dead_code_elimination_example.cpp  debug_symbols_example.cpp  expression_lowering_example.cpp  external_math_example.cpp  external_printf_example.cpp  for_lowering_example.cpp  function_lowering_example.cpp  if_lowering_example.cpp  ir_printer_example.cpp  memory_lowering_example.cpp  while_lowering_example.cpp
frontend/: INTEGRATION.md  INTEGRATION_DIAGRAM.md  QA_REPORT.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ASTNode.jsx  ASTVisualization.jsx  AssemblyDisplay.jsx  BottomBar.jsx  CodeEditor.jsx  Header.jsx  HexDisplay.jsx  Layout.jsx  LogDisplay.jsx  OutputPanel.jsx
frontend/src/services/: compilerService.js
frontend/src/store/: compilerStore.js
frontend/src/styles/: README.md  global.css  theme.js
include/: ast.h  codegen.h  compiler_driver.h  error_handler.h  ir.h  ir_codegen.h  ir_optimizer.h  json_serializer.h  json_serializers.h  lexer.h  parser.h  scope_manager.h  semantic_analyzer.h  symbol_table.h  type.h
src/: main.cpp
src/AST/: ast_node.cpp  ast_printer.cpp  ast_visitor.cpp
src/codegen/: codegen.cpp
src/compiler/: compiler_driver.cpp
src/error/: error_handler.cpp
src/ir/: ir.cpp  ir_codegen.cpp  ir_optimizer.cpp
src/lexer/: lexer.cpp  token.cpp
src/nodes/: declaration_nodes.cpp  expression_nodes.cpp  statement_nodes.cpp
src/parser/: parser.cpp
src/semantic/: scope_manager.cpp  semantic_analyzer.cpp  symbol_table.cpp  type.cpp
src/serializer/: json_serializer.cpp
src/serializers/: ast_serializer.cpp  hex_dump.cpp  token_serializer.cpp
tests/: CMakeLists.txt  README.md  temp_test.cpp  test_codegen.cpp  test_constant_folding.cpp  test_cse.cpp  test_dead_code_elimination.cpp  test_e2e_compilation.cpp  test_error_handler.cpp  test_exec_simple.cpp  test_executable.cpp  test_external_calls.cpp  test_integration.cpp  test_ir.cpp  test_output_validation.cpp  test_parser.cpp  test_peephole_optimization.cpp  test_semantic_main.cpp  test_semantic_us11_implicit_conversions.cpp  test_semantic_us12_pointer_arithmetic.cpp  test_semantic_us13_struct_checking.cpp  test_temp_generator.cpp
tests/backend/fixtures/: test_helpers.h
tests/backend/integration/: test_error_propagation.cpp  test_frontend_pipeline.cpp  test_lexer_parser_integration.cpp  test_parser_semantic_integration.cpp
tests/backend/unit/codegen/: test_codegen.cpp
tests/backend/unit/error/: test_error_handler.cpp
tests/backend/unit/ir/: test_ir_codegen.cpp
tests/backend/unit/lexer/: test_lexer_basic.cpp  test_lexer_error_recovery.cpp  test_lexer_keywords.cpp  test_lexer_literals.cpp  test_lexer_operators.cpp
tests/backend/unit/parser/: test_parser_declarations.cpp  test_parser_expressions.cpp  test_parser_statements.cpp
tests/backend/unit/semantic/: test_scope_manager.cpp  test_semantic_errors.cpp  test_symbol_table.cpp  test_type_checking.cpp  test_warnings.cpp
tests/backend/unit/serializer/: test_json_serializer.cpp
tests/system/: README.md  conftest.py  requirements.txt  test_api_contracts.py  test_full_stack_e2e.py
